Fix: Sync sliders on mobile

--- a/css/_index.scss
+++ b/css/_index.scss
@@ -1064,6 +1064,7 @@ body {
                     justify-content: space-between;
                     align-items: baseline;
                     margin-top: 10px;
+                    margin-bottom: 0.5rem;
     
                     .effect-title {
                         font-size: 24px;
